--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: [TaD Laboratory training materials]
+description: [This site contains training material for the TaD Laboratory training manuals for Quality Assurance]
